# VIT-gait

./: README.md  pyproject.toml  setup.cfg
src/: __init__.py
src/data/: datasets.py
src/engine/: eval.py  train.py
src/models/: vitg.py
src/scripts/: eval.py  train.py
src/tool/: GEI.py  build_silhouettes.py
