
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vitg"
version = "0.1.0"
description = "VITG: a compact Vision Transformer for gait recognition"
requires-python = ">=3.9"
dependencies = [
    "torch",
    "torchvision",
    "opencv-python",
    "numpy",
    "pandas",
    "scikit-learn",
    "scikit-image",
    "tqdm",
    "Pillow",
    "einops",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.ruff]
line-length = 100
select = ["E","F","W"]
ignore = ["E203","W503"]
